remove the individual yarn start scripts and merge them to the regular Job- and TaskManager scripts